--- a/HTML-files/main-page.html
+++ b/HTML-files/main-page.html
@@ -4,22 +4,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Main title for website of our restaurant... TBD-->
-    <title></title>
+    <title>...</title>
 
-    <!-- To link external styling file -->
+    <!--Bootstrap link-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    
+    <!--External styling-->
     <link rel="stylesheet" href="/CSS-files/overall-website.css">
 </head>
 
 <body>
-    <!--Start of Main Page for Website-->
-    <div class="main-welcome">
-        <p>
-            <!--just a test run to make sure things are connected, don't mind -->
-            <!-- font size of color right now -->
-            Welcome to the ...
-        </p>
-    </div>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A8BBA3;">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold text-white" href="#">...</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!--Hero Section-->
+    <header class="hero align-items-center justify-content-center text-center">
+        <div class="hero-content text-dark">
+            <h1 class="fw-bold">Freshness You Can Taste</h1>
+            <p class="lead">Locally sourced, lovingly prepared, naturally delicious.</p>
+            <a href="#" class="btn btn-lg text-white" style="background-color: #B87C4C;">View Our Menu</a>
+        </div>
+    </header>
+
+    <!--Featured Section-->
+    <section class="container my-5">
+        <div class="row text-center">
+            <h2 class="mb-4" style="color: #B87C4C;">Our Goal</h2>
+            <p class="mb-5">At our restaurant, we believe in food that's as vibrant as our community, crafted from the freshest local ingredients and inspired by the seasons.</p>
+
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 border-0 shadow-sm">
+                    <img src="/Images/home-page-cardTwo.jpeg" class="card-img-top" alt="Fresh Produce">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: #A8BBA3;">Farm Fresh</h5>
+                        <p class="card-text">We bring freshness to your plate through every step. From local farmers to local produce, our quality is unmatched.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 border-0 shadow-sm">
+                    <img src="/Images/home-page-cardOne.avif" class="card-img-top" alt="Full display of multiple foods">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: #C4A484;">Made with Care</h5>
+                        <p class="card-text">Every dish is made from scratch with an emphasis on balance, flavor, and freshness.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 border-0 shadow-sm">
+                    <img src="/Images/home-page-cardThree.avif" class="card-img-top" alt="Steak Dinner">
+                    <div class="card-body">
+                        <h5 class="card-title" style="color: #B87C4C;">Sustainable & Local</h5>
+                        <p class="card-text">We minimize waste, support local growers, and make choices that care for our planet.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Footer-->
+    <footer class="text-center py-4" style="background-color: #A8BBA3; color: #F7F1DE;">
+        <p class="mb-0"> ... | Grown and served with care and pride.</p>
+    </footer>
+
+    <!--Bootstrap script-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <!--JS file-->
     <script src="/JS-Files/project.js"></script>
 </body>
 
