Changes to make website deploy correctly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     
     <!--External styling-->
-    <link rel="stylesheet" href="/CSS-files/overall-website.css">
+    <link rel="stylesheet" href="CSS-files/overall-website.css">
 </head>
 
 <body>
@@ -49,7 +49,7 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card h-100 border-0 shadow-sm">
-                    <img src="/Images/home-page-cardTwo.jpeg" class="card-img-top" alt="Fresh Produce">
+                    <img src="Images/home-page-cardTwo.jpeg" class="card-img-top" alt="Fresh Produce">
                     <div class="card-body">
                         <h5 class="card-title" style="color: #A8BBA3;">Farm Fresh</h5>
                         <p class="card-text">We bring freshness to your plate through every step. From local farmers to local produce, our quality is unmatched.</p>
@@ -59,7 +59,7 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card h-100 border-0 shadow-sm">
-                    <img src="/Images/home-page-cardOne.avif" class="card-img-top" alt="Full display of multiple foods">
+                    <img src="Images/home-page-cardOne.avif" class="card-img-top" alt="Full display of multiple foods">
                     <div class="card-body">
                         <h5 class="card-title" style="color: #C4A484;">Made with Care</h5>
                         <p class="card-text">Every dish is made from scratch with an emphasis on balance, flavor, and freshness.</p>
@@ -69,7 +69,7 @@
 
             <div class="col-md-4 mb-4">
                 <div class="card h-100 border-0 shadow-sm">
-                    <img src="/Images/home-page-cardThree.avif" class="card-img-top" alt="Steak Dinner">
+                    <img src="Images/home-page-cardThree.avif" class="card-img-top" alt="Steak Dinner">
                     <div class="card-body">
                         <h5 class="card-title" style="color: #B87C4C;">Sustainable & Local</h5>
                         <p class="card-text">We minimize waste, support local growers, and make choices that care for our planet.</p>
@@ -87,7 +87,7 @@
     <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!--JS file-->
-    <script src="/JS-Files/project.js"></script>
+    <script src="JS-Files/project.js"></script>
 </body>
 
 </html>
