--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
                 </ul>
@@ -37,7 +37,7 @@
         <div class="hero-content text-dark">
             <h1 class="fw-bold">Freshness You Can Taste</h1>
             <p class="lead">Locally sourced, lovingly prepared, naturally delicious.</p>
-            <a href="#" class="btn btn-lg text-white" style="background-color: #B87C4C;">View Our Menu</a>
+            <a href="HTML-Files/menu.html" class="btn btn-lg text-white" style="background-color: #B87C4C;">View Our Menu</a>
         </div>
     </header>
 
@@ -86,8 +86,6 @@
 
     <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <!--JS file-->
-    <script src="JS-Files/project.js"></script>
 </body>
 
 </html>
