--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
                 </ul>
             </div>
