--- a/HTML-Files/about.html
+++ b/HTML-Files/about.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link text-white" href="/index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menu</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
                 </ul>
