--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -25,7 +25,7 @@
                         <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
