--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
