--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>...</title>
 
-    <!--Bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     
-    <!--External styling-->
     <link rel="stylesheet" href="CSS-files/overall-website.css">
 </head>
 
 <body>
-    <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A8BBA3;">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold text-white" href="#">...</a>
@@ -26,13 +23,13 @@
                     <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/contact.html">Contact</a>
+</li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!--Hero Section-->
     <header class="hero align-items-center justify-content-center text-center">
         <div class="hero-content text-dark">
             <h1 class="fw-bold">Freshness You Can Taste</h1>
@@ -41,7 +38,6 @@
         </div>
     </header>
 
-    <!--Featured Section-->
     <section class="container my-5">
         <div class="row text-center">
             <h2 class="mb-4" style="color: #B87C4C;">Our Goal</h2>
@@ -79,12 +75,10 @@
         </div>
     </section>
 
-    <!--Footer-->
     <footer class="text-center py-4" style="background-color: #A8BBA3; color: #F7F1DE;">
         <p class="mb-0"> ... | Grown and served with care and pride.</p>
     </footer>
 
-    <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 
