--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -22,9 +22,9 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/about.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="/index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
                     </ul>
                 </div>
