--- a/HTML-Files/about.html
+++ b/HTML-Files/about.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!--External styling-->
-    <link rel="stylesheet" href="/CS212-Project-Repo/CSS-files/overall-website.css">
+    <link rel="stylesheet" href="https://mmc839.github.io/CS212-Project-Repo/CSS-files/overall-website.css">
 </head>
 
 <body>
@@ -25,10 +25,10 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link text-white" href="/CS212-Project-Repo/index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="https://mmc839.github.io/CS212-Project-Repo/">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menu</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
