--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         
         <!--External styling-->
-        <link rel="stylesheet" href="/CS212-Project-Repo/CSS-files/overall-website.css">
+        <link rel="stylesheet" href="https://mmc839.github.io/CS212-Project-Repo/CSS-files/overall-website.css">
     </head>
 
     <body>
@@ -23,10 +23,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
 
-                        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a></li>
-                        <li class="nav-link text-white"><a href="HTML-Files/about.html">About</a></li>
-                        <li class="nav-link text-white"><a href="HTML-Files/contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="https://mmc839.github.io/CS212-Project-Repo/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menu</a></li>
+                        <li class="nav-link text-white"><a href="about.html">About</a></li>
+                        <li class="nav-link text-white"><a href="contact.html">Contact</a></li>
 
 
 
