--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/contact.html">Contact</a>
 </li>
 
