last changes for this report

--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -25,11 +25,8 @@
 
                         <li class="nav-item"><a class="nav-link text-white" href="https://mmc839.github.io/CS212-Project-Repo/">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menu</a></li>
-                        <li class="nav-link text-white"><a href="about.html">About</a></li>
-                        <li class="nav-link text-white"><a href="contact.html">Contact</a></li>
-
-
-
+                        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
