--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
                     <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/contact.html">Contact</a>
-</li>
-
-                    <li class="nav-link text-white"><a href="HTML-Files/about.html">About</a></li>
-                    <li class="nav-link text-white"><a href="HTML-Files/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="HTML-Files/contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
