--- a/HTML-Files/contact.html
+++ b/HTML-Files/contact.html
@@ -28,7 +28,7 @@
                         <a class="nav-link text-white" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">About</a>
+                        <a class="nav-link text-white" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white active" aria-current="page" href="contact.html">Contact</a>
