--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         
         <!--External styling-->
-        <link rel="stylesheet" href="https://mmc839.github.io/CS212-Project-Repo/CSS-files/overall-website.css">
+        <link rel="stylesheet" href="https://mmc839.github.io/CS212-Project-Repo/CSS-files/menu.css">
     </head>
 
     <body>
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
 
-                        <li class="nav-item"><a class="nav-link text-white" href="https://mmc839.github.io/CS212-Project-Repo/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="../index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menu</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
@@ -47,7 +47,7 @@
                 <!-- CARD 1 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Starter">
+                        <img src="../Images/Menu-Images/starter-1.avif" class="card-img-top" alt="Starter">
                         <div class="card-body">
                             <h5 class="card-title">Seasonal Garden Salad</h5>
                             <p class="card-text">Mixed greens, heirloom vegetables, light citrus vinaigrette.</p>
@@ -59,7 +59,7 @@
                 <!-- CARD 2 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Starter">
+                        <img src="../Images/Menu-Images/starter-2.webp" class="card-img-top" alt="Starter">
                         <div class="card-body">
                             <h5 class="card-title">Roasted Tomato Soup</h5>
                             <p class="card-text">Slow-roasted tomatoes, basil oil, toasted sourdough.</p>
@@ -121,6 +121,50 @@
                             <h5 class="card-title">Grilled Veggie Bowl</h5>
                             <p class="card-text">Quinoa, roasted squash, greens, tahini drizzle.</p>
                             <p class="price">$16</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- SECTION 3 - DESSERTS -->
+        <section class="container mb-5">
+            <h2 class="section-title" style="color: #A8BBA3;">Desserts</h2>
+            <div class="row g-4">
+
+                <!-- CARD 1 -->
+                <div class="col-md-4">
+                    <div class="card menu-card h-100">
+                        <img src="" class="card-img-top" alt="Dessert">
+                        <div class="card-body">
+                            <h5 class="card-title"></h5>
+                            <p class="card-text"></p>
+                            <p class="price">$7</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CARD 2 -->
+                <div class="col-md-4">
+                    <div class="card menu-card h-100">
+                        <img src="" class="card-img-top" alt="Dessert">
+                        <div class="card-body">
+                            <h5 class="card-title"></h5>
+                            <p class="card-text"></p>
+                            <p class="price">$8</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- CARD 3 -->
+                <div class="col-md-4">
+                    <div class="card menu-card h-100">
+                        <img src="" class="card-img-top" alt="Dessert">
+                        <div class="card-body">
+                            <h5 class="card-title"></h5>
+                            <p class="card-text"></p>
+                            <p class="price">$9</p>
                         </div>
                     </div>
                 </div>
