--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -71,7 +71,7 @@
                 <!-- CARD 3 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Starter">
+                        <img src="../Images/Menu-Images/starter-3.webp" class="card-img-top" alt="Starter">
                         <div class="card-body">
                             <h5 class="card-title">Crispy Cauliflower Bites</h5>
                             <p class="card-text">Golden-fried bites with tangy herb dip.</p>
@@ -92,7 +92,7 @@
                 <!-- CARD 1 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Entrée">
+                        <img src="../Images/Menu-Images/entree-1.webp" class="card-img-top" alt="Entrée">
                         <div class="card-body">
                             <h5 class="card-title">Lemon Herb Chicken</h5>
                             <p class="card-text">Char-grilled chicken, fresh herbs, roasted vegetables.</p>
@@ -104,7 +104,7 @@
                 <!-- CARD 2 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Entrée">
+                        <img src="../Images/Menu-Images/entree-2.webp" class="card-img-top" alt="Entrée">
                         <div class="card-body">
                             <h5 class="card-title">Pasta Primavera</h5>
                             <p class="card-text">Seasonal veggies, light cream sauce, fresh parmesan.</p>
@@ -116,7 +116,7 @@
                 <!-- CARD 3 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Entrée">
+                        <img src="../Images/Menu-Images/entree-3.webp" class="card-img-top" alt="Entrée">
                         <div class="card-body">
                             <h5 class="card-title">Grilled Veggie Bowl</h5>
                             <p class="card-text">Quinoa, roasted squash, greens, tahini drizzle.</p>
@@ -136,10 +136,10 @@
                 <!-- CARD 1 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Dessert">
+                        <img src="../Images/Menu-Images/dessert-1.webp" class="card-img-top" alt="Dessert">
                         <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text"></p>
+                            <h5 class="card-title">Strawberry Cheesecake</h5>
+                            <p class="card-text">Homemade cheesecake topped with fresh strawberries</p>
                             <p class="price">$7</p>
                         </div>
                     </div>
@@ -148,10 +148,10 @@
                 <!-- CARD 2 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Dessert">
+                        <img src="../Images/Menu-Images/dessert-2.webp" class="card-img-top" alt="Dessert">
                         <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text"></p>
+                            <h5 class="card-title">Brownies and Ice Cream</h5>
+                            <p class="card-text">Fresh-baked brownies with vanilla ice cream and caramel drizzle</p>
                             <p class="price">$8</p>
                         </div>
                     </div>
@@ -160,10 +160,10 @@
                 <!-- CARD 3 -->
                 <div class="col-md-4">
                     <div class="card menu-card h-100">
-                        <img src="" class="card-img-top" alt="Dessert">
+                        <img src="../Images/Menu-Images/dessert-3.avif" class="card-img-top" alt="Dessert">
                         <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text"></p>
+                            <h5 class="card-title">Double Chocolate Cake</h5>
+                            <p class="card-text">Chocolate cake with rich chocolate frosting</p>
                             <p class="price">$9</p>
                         </div>
                     </div>
