Added checkout page with CSS styling and updated menu and JS files.

--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -4,11 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-         <!--Bootstrap link-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+        <!--Bootstrap link-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
         
         <!--External styling-->
         <link rel="stylesheet" href="https://mmc839.github.io/CS212-Project-Repo/CSS-files/menu.css">
+
+        <title>Menu</title>
     </head>
 
     <body>
@@ -52,6 +54,16 @@
                             <h5 class="card-title">Seasonal Garden Salad</h5>
                             <p class="card-text">Mixed greens, heirloom vegetables, light citrus vinaigrette.</p>
                             <p class="price">$11</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Seasonal Garden Salad"
+                                data-price="11">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -64,6 +76,16 @@
                             <h5 class="card-title">Roasted Tomato Soup</h5>
                             <p class="card-text">Slow-roasted tomatoes, basil oil, toasted sourdough.</p>
                             <p class="price">$9</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Roasted Tomato Soup"
+                                data-price="9">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -76,6 +98,16 @@
                             <h5 class="card-title">Crispy Cauliflower Bites</h5>
                             <p class="card-text">Golden-fried bites with tangy herb dip.</p>
                             <p class="price">$10</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Crispy Cauliflower Bites"
+                                data-price="10">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -97,6 +129,16 @@
                             <h5 class="card-title">Lemon Herb Chicken</h5>
                             <p class="card-text">Char-grilled chicken, fresh herbs, roasted vegetables.</p>
                             <p class="price">$18</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Lemon Herb Chicken"
+                                data-price="18">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -109,6 +151,16 @@
                             <h5 class="card-title">Pasta Primavera</h5>
                             <p class="card-text">Seasonal veggies, light cream sauce, fresh parmesan.</p>
                             <p class="price">$17</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Pasta Primavera"
+                                data-price="17">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -121,6 +173,16 @@
                             <h5 class="card-title">Grilled Veggie Bowl</h5>
                             <p class="card-text">Quinoa, roasted squash, greens, tahini drizzle.</p>
                             <p class="price">$16</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Grilled Veggie Bowl"
+                                data-price="16">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -141,6 +203,16 @@
                             <h5 class="card-title">Strawberry Cheesecake</h5>
                             <p class="card-text">Homemade cheesecake topped with fresh strawberries</p>
                             <p class="price">$7</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Strawberry Cheesecake"
+                                data-price="7">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -153,6 +225,16 @@
                             <h5 class="card-title">Brownies and Ice Cream</h5>
                             <p class="card-text">Fresh-baked brownies with vanilla ice cream and caramel drizzle</p>
                             <p class="price">$8</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Brownies and Ice Cream"
+                                data-price="8">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -165,6 +247,16 @@
                             <h5 class="card-title">Double Chocolate Cake</h5>
                             <p class="card-text">Chocolate cake with rich chocolate frosting</p>
                             <p class="price">$9</p>
+
+                            <!-- ADD TO CART BUTTON -->
+                            <button 
+                                class="btn text-white mt-2"
+                                style="background-color: #B87C4C;"
+                                data-add-to-cart
+                                data-name="Double Chocolate Cake"
+                                data-price="9">
+                                Add to Cart
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -172,15 +264,17 @@
             </div>
         </section>
 
-        
 
         <!--Footer-->
         <footer class="text-center py-4" style="background-color: #A8BBA3; color: #F7F1DE;">
             <p class="mb-0"> ... | Grown and served with care and pride.</p>
         </footer>
 
-        <!--Bootstrap script-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    </body>
+        <!--Bootstrap + PROJECT JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
+        <!-- Your add-to-cart + checkout logic -->
+        <script src="../JS-Files/project.js"></script>
+
+    </body>
 </html>
