Added js reference to each html page as well as an updated navbar to each with the cart icon, also updated js.

--- a/HTML-Files/about.html
+++ b/HTML-Files/about.html
@@ -25,10 +25,27 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link text-white" href="https://mmc839.github.io/CS212-Project-Repo/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menu</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="menu.html">Menu</a>
+                    </li>
+                     <li class="nav-item">
+                         <a class="nav-link text-white" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="contact.html">Contact</a>
+                    </li>
+
+                    <!-- NEW CART NAV ITEM -->
+                    <li class="nav-item">
+                        <a class="nav-link text-white cart-link" href="checkout.html">
+                            <span class="me-1">Cart</span>
+                            <span class="cart-icon">🛒</span>
+                            <span class="cart-count-badge cart-count">0</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -89,6 +106,8 @@
 
     <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../JS-Files/project.js"></script>
+
 </body>
 
 </html>
