--- a/HTML-Files/checkout.html
+++ b/HTML-Files/checkout.html
@@ -118,6 +118,6 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../cart.js"></script>
+    <script src="../JS-Files/project.js"></script>
 </body>
 </html>
