--- a/HTML-Files/contact.html
+++ b/HTML-Files/contact.html
@@ -22,16 +22,25 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../index.html">Home</a>
+                        <a class="nav-link text-white" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="menu.html">Menu</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="about.html">About</a>
+                     <li class="nav-item">
+                         <a class="nav-link text-white" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white active" aria-current="page" href="contact.html">Contact</a>
+                        <a class="nav-link text-white" href="contact.html">Contact</a>
+                    </li>
+
+                    <!-- NEW CART NAV ITEM -->
+                    <li class="nav-item">
+                        <a class="nav-link text-white cart-link" href="checkout.html">
+                            <span class="me-1">Cart</span>
+                            <span class="cart-icon">🛒</span>
+                            <span class="cart-count-badge cart-count">0</span>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -116,6 +125,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="../JS-Files/project.js"></script>
 </body>
 
 </html>
