--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -24,11 +24,27 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="menu.html">Menu</a>
+                        </li>
+                         <li class="nav-item">
+                             <a class="nav-link text-white" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="contact.html">Contact</a>
+                        </li>
 
-                        <li class="nav-item"><a class="nav-link text-white" href="../index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="menu.html">Menu</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
+                        <!-- NEW CART NAV ITEM -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white cart-link" href="checkout.html">
+                                <span class="me-1">Cart</span>
+                                <span class="cart-icon">🛒</span>
+                                <span class="cart-count-badge cart-count">0</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -275,6 +291,6 @@
 
         <!-- Your add-to-cart + checkout logic -->
         <script src="../JS-Files/project.js"></script>
-
+        
     </body>
 </html>
