possible fix for file paths

--- a/HTML-Files/checkout.html
+++ b/HTML-Files/checkout.html
@@ -113,7 +113,7 @@
 
     <!-- Footer -->
     <footer class="text-center py-4" style="background-color: #A8BBA3; color: #F7F1DE;">
-        <p class="mb-0"> ... | Grown and served with care and pride.</p>
+        <p class="mb-0"> Fresh Fields Kithcen | Grown and served with care and pride.</p>
     </footer>
 
     <!-- Scripts -->
