--- a/HTML-Files/contact.html
+++ b/HTML-Files/contact.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="index.html">Home</a>
+                        <a class="nav-link text-white" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="menu.html">Menu</a>
@@ -121,7 +121,7 @@
     </section>
 
     <footer class="text-center py-4" style="background-color: #A8BBA3; color: #F7F1DE;">
-        <p class="mb-0"> ... | Grown and served with care and pride.</p>
+        <p class="mb-0"> Fresh fields Kitchen | Grown and served with care and pride.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
