--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>...</title>
+    <title>Fresh Fields Kitchen</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A8BBA3;">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold text-white" href="#">...</a>
+            <a class="navbar-brand fw-bold text-white" href="#">Fresh Fields Kitchen </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,18 +24,18 @@
                         <a class="nav-link text-white" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="menu.html">Menu</a>
+                        <a class="nav-link text-white" href="HTML-Files/menu.html">Menu</a>
                     </li>
                      <li class="nav-item">
-                         <a class="nav-link text-white" href="about.html">About</a>
+                         <a class="nav-link text-white" href="HTML-Files/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="contact.html">Contact</a>
+                        <a class="nav-link text-white" href="HTML-Files/contact.html">Contact</a>
                     </li>
 
                     <!-- NEW CART NAV ITEM -->
                     <li class="nav-item">
-                        <a class="nav-link text-white cart-link" href="checkout.html">
+                        <a class="nav-link text-white cart-link" href="HTML-Files/checkout.html">
                             <span class="me-1">Cart</span>
                             <span class="cart-icon">🛒</span>
                             <span class="cart-count-badge cart-count">0</span>
@@ -92,11 +92,11 @@
     </section>
 
     <footer class="text-center py-4" style="background-color: #A8BBA3; color: #F7F1DE;">
-        <p class="mb-0"> ... | Grown and served with care and pride.</p>
+        <p class="mb-0"> Fresh Fields Kitchen | Grown and served with care and pride.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="../JS-Files/project.js"></script>
+    <script src="JS-Files/project.js"></script>
 </body>
 
 </html>
