--- a/HTML-Files/about.html
+++ b/HTML-Files/about.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="index.html">Home</a>
+                        <a class="nav-link text-white" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="menu.html">Menu</a>
@@ -101,7 +101,7 @@
 
     <!--Footer-->
     <footer class="text-center py-4" style="background-color: #A8BBA3; color: #F7F1DE;">
-        <p class="mb-0"> ... | Proudly supporting local farmers and small businesses.</p>
+        <p class="mb-0"> Fresh Fields Kitchen | Proudly supporting local farmers and small businesses.</p>
     </footer>
 
     <!--Bootstrap script-->
