--- a/HTML-Files/menu.html
+++ b/HTML-Files/menu.html
@@ -18,14 +18,14 @@
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A8BBA3;">
             <div class="container-fluid">
-                <a class="navbar-brand fw-bold text-white" href="#">...</a>
+                <a class="navbar-brand fw-bold text-white" href="#">Fresh Fields Kitchen</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="index.html">Home</a>
+                            <a class="nav-link text-white" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="menu.html">Menu</a>
@@ -283,7 +283,7 @@
 
         <!--Footer-->
         <footer class="text-center py-4" style="background-color: #A8BBA3; color: #F7F1DE;">
-            <p class="mb-0"> ... | Grown and served with care and pride.</p>
+            <p class="mb-0"> Fresh Fields Kitchen | Grown and served with care and pride.</p>
         </footer>
 
         <!--Bootstrap + PROJECT JS-->
